lifeguard-derive/tests/ui/compile_error_linked_invalid_path.stderr
error: Linked path must have at least 2 hops (intermediate and target), found 1. Use format: `Entity1 -> Entity2`
 --> tests/ui/compile_error_linked_invalid_path.rs:9:5
  |
9 |     Comments,
  |     ^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/compile_error_linked_invalid_path.rs:10:2
   |
10 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_linked_invalid_path.rs`
